@@ -43,10 +43,8 @@
       --add-opens com.azure.messaging.servicebus/com.azure.messaging.servicebus.administration.models=ALL-UNNAMED
 
       --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-      --add-exports com.azure.core/com.azure.core.implementation.instrumentation=ALL-UNNAMED
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
       --add-reads com.azure.messaging.servicebus=com.azure.http.netty
-      --add-reads com.azure.messaging.servicebus=com.azure.core.tracing.opentelemetry
       --add-reads com.azure.messaging.servicebus=com.azure.core.experimental
     </javaModulesSurefireArgLine>
   </properties>
@@ -60,7 +58,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-amqp</artifactId>
-      <version>2.8.6</version> <!-- {x-version-update;com.azure:azure-core-amqp;dependency} -->
+      <version>2.9.0-beta.3</version> <!-- {x-version-update;unreleased_com.azure:azure-core-amqp;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
